K8S/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commands-depl
  template:
    metadata:
      labels:
        app: commands-depl
    spec:
      containers:
        - name: commands-depl
          image: igorsantanam/commandservice:latest

---

apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-srv
spec:
  type: ClusterIP
  selector: 
    app: commands-depl
  ports:
    - name: commands-depl
      protocol: TCP
      port: 80
      targetPort: 80
