K8S/mssql-plat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: mssql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
        - name:  mssql
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
          - name:  mssqldb
            mountPath:  /var/opt/mssql/data
      volumes:
      - name:  mssqldb
        persistentVolumeClaim:
          - claimName: mssql-claim  
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-clusterip-svc
spec:
  type: ClusterIP
  selector: 
    app: mssql
  ports:
  - name: mssql
    protocol: TCP
    port: 1433
    targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer-svc
spec:
  type: LoadBalancer
  selector:
    app: mssql
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
