K8S/platforms-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: platforms-svc
  labels:
    app: platforms-depl
spec:
  selector:
    app: platforms-depl
  type: NodePort
  ports:
  - name: platforms-depl
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodepPort: 30200
